refactor: convert project into a multi-module maven project